# streamblocks-platforms

platform-multicore/src/main/java/ch/epfl/vlsc/sw/backend/: Alias.java
platform-multicore/src/main/resources/plink/systemc/art-plink/: CMakeLists.txt
platform-vivadohls/src/main/java/ch/epfl/vlsc/hls/backend/systemc/: APControl.java  LogicValue.java  LogicVector.java  LogicVectorHLS.java  LogicVectorVerilator.java  ObjectFactory.java  Queue.java  SCIOStage.java  SCInstance.java  Simulator.java  SystemCNetwork.java  SystemCTestBench.java
platform-vivadohls/src/main/java/ch/epfl/vlsc/hls/phase/: VivadoHLSBackendPhase.java
platform-vivadohls/src/main/resources/lib/cmake/: Helper.cmake
platform-vivadohls/src/main/resources/lib/hls/: iostage.h
platform-vivadohls/src/main/resources/lib/systemc/: CMakeLists.txt  queue.h  simulation-iostage.h  trigger.cpp
platform-vivadohls/src/main/resources/lib/systemc/verilator/: CMakeLists.txt  queue.h  simulate.cpp  simulate.h
platform-vivadohls/src/main/resources/lib/systemc/vivadohls/: CMakeLists.txt  simulate.h  trigger.h
